[gd_scene load_steps=16 format=2]

[ext_resource path="res://DrBook/Tools3.png" type="Texture" id=1]
[ext_resource path="res://DrBook/Tools2.png" type="Texture" id=2]
[ext_resource path="res://DrBook/Tools4.png" type="Texture" id=3]
[ext_resource path="res://DrBook/Tools1.png" type="Texture" id=4]
[ext_resource path="res://DrBook/Procedures1.png" type="Texture" id=5]
[ext_resource path="res://DrBook/Procedures 3.png" type="Texture" id=6]
[ext_resource path="res://DrBook/Procedures2.png" type="Texture" id=7]
[ext_resource path="res://DrBook/HowToPlayPage2.png" type="Texture" id=8]
[ext_resource path="res://DrBook/HowToPlayPage1.png" type="Texture" id=9]
[ext_resource path="res://DrBook/HowToPlayPage3.png" type="Texture" id=10]
[ext_resource path="res://PermanentMarker-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://DrBook/Blank.png" type="Texture" id=12]
[ext_resource path="res://DrBook/DrBook.gd" type="Script" id=13]
[ext_resource path="res://DrBook/Tools5.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 11 )

[node name="DrBook" type="Node2D"]
script = ExtResource( 13 )

[node name="HowToPlay1" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="HowToPlay2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="HowToPlay3" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 10 )

[node name="Procedures1" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Procedures2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="Procedures3" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="Tools1" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="Tools2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Tools3" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Tools4" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="Tools5" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 14 )

[node name="Index" type="Sprite" parent="."]
position = Vector2( 959.251, 540 )
texture = ExtResource( 12 )

[node name="HowToPlay" type="Button" parent="Index"]
margin_left = -205.502
margin_top = -241.668
margin_right = 210.498
margin_bottom = -134.668
custom_fonts/font = SubResource( 1 )
text = "How To Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Procedures" type="Button" parent="Index"]
margin_left = -204.502
margin_top = -124.668
margin_right = 211.498
margin_bottom = -17.6675
custom_fonts/font = SubResource( 1 )
text = "Procedures"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="Button" parent="Index"]
margin_left = -205.691
margin_top = -5.74683
margin_right = 210.309
margin_bottom = 101.253
custom_fonts/font = SubResource( 1 )
text = "Tools"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 1318.0
margin_top = 21.0
margin_right = 1523.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 1691.0
margin_top = 20.0
margin_right = 1896.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="."]
margin_left = 401.0
margin_top = 20.0
margin_right = 606.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "Prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexButton" type="Button" parent="."]
margin_left = 25.0
margin_top = 18.0
margin_right = 230.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "Index"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Index/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Index/Procedures" to="." method="_on_Procedures_pressed"]
[connection signal="pressed" from="Index/Tools" to="." method="_on_Tools_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="IndexButton" to="." method="_on_IndexButton_pressed"]
